# libselect-rust

./: .appveyor.yml  Cargo.toml  README.md  build.rs
src/: easy.rs  error.rs  io.rs  io_handle.rs  lib.rs
src/select/: mod.rs  select.h  select_unix.c  select_win.c
src/select_impl/: mod.rs  select_unix.c  select_win.c
tests/: socket.rs
tests/mirror/: mod.rs
